# Sysprog

./: Blatt05 Theorie.docx  README.md  main.c
Blatt01/Programmieraufgabe/: CMakeLists.txt  as  main.c  prio_q.c  prio_queue
Blatt01/Theorie/: Blatt00 Theorie.docx  Sysprog Blatt 1.docx  main.c  ~$att00 Theorie.docx
Blatt02/: Praxis02
Blatt02/Code/Code/: CMakeLists.txt  main.c  raytracer
Blatt02/Code/vorgabe/: as  main.c  raytracer
Blatt02/Theorie/: 2 Übungsblatt Theorie.docx  Theorie02  ~$Übungsblatt Theorie.docx  Übungsblatt 2.docx
Blatt03/Praxis/include/: Queue.h  task.h
Blatt03/Praxis/src/: SJN.c  main.c  scheduler
Blatt03/Theorie/: Sysprog Theorie Blatt3 PDF.docx  Sysprog Theorie Blatt3.docx  ~$sprog Theorie Blatt3.docx  Übungsblatt 3.docx
Blatt04/Praxis/Vorgabe/src/: management.c  order.c  warehouse.c
Blatt04/Theorie/: Sysprog Theorie Blatt04.docx  ~$sprog Theorie Blatt04.docx  Übungsblatt 04.docx
Blatt05/: bankier  bankier.c  matrix.c
Blatt05/Theorie/: Blatt05 Theorie.docx  ~$att05 Theorie1.docx
Blatt06/Theorie/: Blatt06.docx
